<resources>
    <string name="app_name">IT Sample app</string>
    <string name="test_hello">Hello World</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="calculate">Calculate</string>
    <string name="hello">Hello World, HelloCallbacksActivity!\n</string>
    <string name="onCreateCallback">onCreate Callback\n</string>
    <string name="onPostCreateCallback">onPostCreate Callback\n</string>
    <string name="onStartCallback">onStart Callback\n</string>
    <string name="onRestartCallback">onRestart Callback\n</string>
    <string name="onResumeCallback">onResume Callback\n</string>
    <string name="onPauseCallback">onPause Callback\n</string>
    <string name="onStopCallback">onStop Callback\n</string>
    <string name="onDestroyCallback">onDestroy Callback\n</string>
    <string name="message">Message</string>
    <string name="send">SEND</string>
    <string name="enter_a_message">Enter a message:</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="send_message_object">SEND MESSAGE (OBJECT)</string>
    <string name="enter_a_number">Enter a number:</string>
    <string name="cancel">CANCEL</string>
    <string name="send_output_1">SEND OUTPUT 1</string>
    <string name="send_output_2">SEND OUTPUT 2</string>
    <string name="make_phone_dial">MAKE PHONE DIAL</string>
    <string name="dialNumber">112</string>
    <string name="make_phone_call">MAKE PHONE CALL</string>
    <string name="noPermission">No Permission</string>
    <string name="openUrlWeb">OPEN URL WEB</string>
    <string name="androidWeb">http://developer.android.com</string>
    <string name="openMap">OPEN MAP</string>
    <string-array name="arrayNumber">
        <item>Number - 1</item>
        <item>Number - 2</item>
        <item>Number - 3</item>
        <item>Number - 4</item>
        <item>Number - 5</item>
        <item>Number - 6</item>
        <item>Number - 7</item>
        <item>Number - 8</item>
        <item>Number - 9</item>
        <item>Number - 10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_dialog_yes">YES</string>
    <string name="alert_dialog_no">NO</string>
    <string name="exit_query">Are you sure you want to exit?</string>
</resources>
